Wed Sep 30 15:47:13 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): bypass Symbol#to_proc
	  call to optimize symbol block passing.

Wed Sep 30 01:34:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_free): fix memory leak at syntax error when
	  warn-indent is enabled.

Tue Sep 29 22:27:50 2015  Benoit Daloze  <eregontp@gmail.com>

	* parse.y: fix minor typo. [ci skip][fix GH-1038].
	  Patch by @ltratt.

Tue Sep 29 16:53:53 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.tmpl, lib/unicode_normalize/tables.rb:
	  get rid of many .freeze commands by using frozen_string_literal
	  pragma.

Tue Sep 29 16:37:29 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_dstr_fragments): fix performance by omitting
	  the first empty string only for keeping literal encoding if
	  other literals are too.  [ruby-core:70930] [Bug #11556]

	* string.c (rb_str_append_literal): append but keep encoding non
	  US-ASCII.

Mon Sep 28 17:40:17 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (mtime): use usec instead of fractions to parse
	  decimal fractions of a second correctly when the number of digits
	  is not 6.

Mon Sep 28 16:07:08 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (mtime): parse decimal fractions of a second as
	  specified in RFC 3659.

Mon Sep 28 10:31:12 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/test_forwardable.rb: Write basic tests for lib/forwardable.
	  [fix GH-1035] Patch by @kachick

Sun Sep 27 23:32:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_define_class, rb_define_class_id_under): refine
	  error messages.

	* class.c (rb_define_module, rb_define_module_id_under): ditto,
	  and make consistent with class.

Sun Sep 27 18:44:43 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: removed duplicated message.

Sun Sep 27 15:46:58 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
